--- a/style.css
+++ b/style.css
@@ -3,10 +3,18 @@
   margin: 0;
   border: 2px solid purple;
 }
-
+body {
+  height: 100vh;
+}
+body {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
 .grid {
   height: 30rem;
   width: 30rem;
+  border: 5px solid brown;
   display: inline-grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
