--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 body {
   height: 100vh;
+  /* background-color: black; */
 }
 body {
   display: grid;
@@ -12,6 +13,7 @@ body {
   align-items: center;
 }
 .grid {
+  outline: none;
   height: 30rem;
   width: 30rem;
   border: 5px solid brown;
