--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  /* border: 2px solid purple; */
+  /* margin: 0; */
   color: #e5e5cb;
   font-family: "Share Tech Mono", monospace;
 }
