--- a/style.css
+++ b/style.css
@@ -18,12 +18,10 @@ body {
 }
 .container {
   display: grid;
-  /* gap: 1rem; */
   align-content: center;
   justify-items: center;
 }
 h1 {
-  /* margin-top: 0; */
   font-weight: 700;
 }
 .start {
@@ -44,10 +42,11 @@ h1 {
 }
 .one,
 .two {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   padding: 0.5rem 1rem;
   box-shadow: 10px 10px 10px 5px rgba(0, 0, 0, 0.2);
-  border-radius: 0.8rem;
+  border-radius: 1rem;
+  border: 0.5rem solid var(--dark-brown);
 }
 body {
   margin: 0;
@@ -55,17 +54,23 @@ body {
   display: grid;
   justify-content: center;
   align-items: center;
-  /* gap: 2rem; */
 }
 .print-turn {
   display: flex;
   justify-content: center;
   font-size: 1.2rem;
 }
+.grid-container {
+  background-color: var(--dark-brown);
+  border-radius: 1rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
 .grid {
+  border: 1rem solid var(--dark-brown);
+  border-radius: 1rem;
   height: 30rem;
   width: 30rem;
-
+  gap: 1rem;
   display: inline-grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -73,7 +78,16 @@ body {
 }
 .cell,
 .cell-empty {
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  background-color: var(--brown);
+  border-radius: 1rem;
+  border-style: none;
+}
+.cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 7rem;
 }
 .cell-empty:hover {
   cursor: pointer;
