--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  transition: 1s;
 }
 .container {
   display: grid;
@@ -23,11 +24,24 @@ body {
 }
 h1 {
   font-weight: 700;
+  transform: rotate(3);
 }
 .start {
+  font-size: 1rem;
+  border-radius: 1rem;
+  border-style: none;
+  display: flex;
+  justify-self: end;
   background-color: var(--dark-brown);
   cursor: pointer;
+  padding: 1rem 2rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
 }
+.start:hover {
+  opacity: 0.5;
+}
+
 .turn {
   display: flex;
   justify-content: space-between;
@@ -75,6 +89,7 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   font-family: "Courier New", Courier, monospace;
+  transition: 0.5s;
 }
 .cell,
 .cell-empty {
