--- a/style.css
+++ b/style.css
@@ -10,6 +10,17 @@
   color: var(--light-yellow);
   font-family: "Share Tech Mono", monospace;
 }
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
 html,
 body {
   height: 100%;
@@ -41,7 +52,14 @@ h1 {
 .start:hover {
   opacity: 0.5;
 }
-
+.inform {
+  font-size: 1.2rem;
+  display: flex;
+  justify-self: flex-start;
+  animation-duration: 2s;
+  animation-name: slidein;
+  /* animation-iteration-count: initial; */
+}
 .turn {
   display: flex;
   justify-content: space-between;
