--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ body {
 }
 .top {
   display: flex;
-  justify-content: space-between;
+
   gap: 3rem;
   align-items: center;
 }
 
 .container {
   display: grid;
+  /* min-width: 100wh; */
   align-content: center;
   justify-items: center;
 }
@@ -54,16 +55,18 @@ h1 {
   cursor: pointer;
   padding: 1rem 2rem;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-  transition: 0.5s;
+  /* transition: 0.5s; */
 }
 .start:hover {
   opacity: 0.5;
 }
 .inform {
-  font-size: 1.2rem;
   display: flex;
-  justify-self: flex-start;
-  animation-duration: 2s;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3rem;
+  font-size: 1.2rem;
+  animation-duration: 0.5s;
   animation-name: slidein;
 }
 .turn {
