--- a/style.css
+++ b/style.css
@@ -160,5 +160,7 @@ img[src$="svg"] {
   height: 2rem;
 }
 footer {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
