--- a/style.css
+++ b/style.css
@@ -163,4 +163,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  align-self: flex-end;
+  gap: 0.5rem;
+  position: relative;
+  bottom: 1rem;
 }
