--- a/style.css
+++ b/style.css
@@ -43,6 +43,12 @@ body {
   /* min-width: 100wh; */
   align-content: center;
   justify-items: center;
+  align-items: center;
+}
+.page-one {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 h1 {
   font-weight: 700;
