--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 * {
   box-sizing: border-box;
-  color: var(--light-yellow);
+  color: var(--dark-brown);
   font-family: "Share Tech Mono", monospace;
 }
 @keyframes slidein {
@@ -61,6 +61,7 @@ h1 {
   display: flex;
   justify-self: end;
   background-color: var(--dark-brown);
+  color: var(--light-yellow);
   cursor: pointer;
   padding: 1rem 2rem;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
@@ -96,11 +97,11 @@ h1 {
   padding: 0.5rem 1rem;
   box-shadow: 10px 10px 10px 5px rgba(0, 0, 0, 0.2);
   border-radius: 1rem;
-  border: 0.5rem solid var(--dark-brown);
+  border: 0.5rem solid var(--yellow);
 }
 body {
   margin: 0;
-  background-color: #3c2a21;
+  /* background-color: #3c2a21; */
   display: grid;
   justify-content: center;
   align-items: center;
@@ -111,12 +112,12 @@ body {
   font-size: 1.2rem;
 }
 .grid-container {
-  background-color: var(--dark-brown);
+  background-color: var(--brown);
   border-radius: 1rem;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 .grid {
-  border: 1rem solid var(--dark-brown);
+  border: 1rem solid var(--brown);
   border-radius: 1rem;
   height: 30rem;
   width: 30rem;
@@ -130,7 +131,7 @@ body {
 .cell,
 .cell-empty {
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-  background-color: var(--brown);
+  background-color: var(--light-yellow);
   border-radius: 1rem;
   border-style: none;
 }
