--- a/style.css
+++ b/style.css
@@ -66,16 +66,11 @@ h1 {
   cursor: pointer;
   padding: 1rem 2rem;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-  /* transition: 0.5s; */
 }
 .start:hover {
-  opacity: 0.5;
+  transform: scale(1.3);
 }
-.animate-bob:hover,
-.animate-bob-turn,
-.animate-bob-auto:placeholder-shown {
-  animation: 0.75s ease-in-out infinite bob;
-}
+
 .inform {
   display: flex;
   justify-content: space-between;
